# automation-system

./: .gitignore  README.md  pyproject.toml
docs/: automation-control-panel-claude-code-prompt.md  automation-system-claude-code-prompt.md
src/automation/: cli.py  context_search.py  database.py  main.py  model_router.py  processors.py  quality_audit.py  watchers.py
src/automation/addons/: __init__.py
src/automation/web/: app.py
src/automation/web/templates/: audits.html  base.html  dashboard.html  logs.html  models.html  settings.html  stats.html
src/automation/web/templates/partials/: stats.html
